                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 21-04-2006 removed: * All Songs item in library view.
 - 21-04-2006 fixed: Appearance of the degree symbol in Weather, System Information and the LCD.
 - 21-04-2006 fixed: [ 1447371 ] no karaoke over video.
 - 21-04-2006 changed: enable/disable subtitles now enable/disable caching of subtitles. also polished browsing a bit.
 - 21-04-2006 fixed: fixed the error in filezip properly.
 - 21-04-2006 fixed: xbmc would enable ac3 encoder if output was set to analog, but dash had ac3 enabled.
 - 21-04-2006 added: SMB ClientTimeOut to SMB Client GUI Settings
 - 21-04-2006 fixed: Samba GUI Settings: SambaDosCodepage change effects to SambaWinsServer !!
 - 21-04-2006 fixed: [ 1474060 ] Little modchip message problem
 - 21-04-2006 changed: do a bidi flip of strings independently of the language codepage (eg. unicode strings may contain hebrew strings and the codepage may differ)
 - 21-04-2006 changed: progress dialog update() python method can now update the dialog text, thanks to Donno.
 - 21-04-2006 fixed: [ 1470736 ] Kai game launch problems.
 - 21-04-2006 added: Indonesian language file (Thnx to djoens)
 - 21-04-2006 updated: Swedish language file (Thnx to blittan)
 - 21-04-2006 updated: Norwegian language file (Thnx to vnm)
 - 21-04-2006 fixed: [ 1473159 ] Big size font subtitles long time play error.
 - 21-04-2006 fixed: [ 1473940 ] ControlLabel don't always display
 - 21-04-2006 fixed: [ 1459126 ] LogPath XML Setting Not Respected.
 - 21-04-2006 fixed: SetHeading method in python keyboard wasn't working.  Thanks to Nuka1195.
 - 21-04-2006 added: Support for unswizzled 32 bit textures in Textures.xpr