@@ -17,6 +17,6 @@ protected:
   bool LoadAsxInfo(CStdString& strData);
   bool LoadAsxIniInfo(CStdString& strData);
   bool LoadRAMInfo(CStdString& strData);
-  bool LoadPLSInfo(const CStdString& strFileName);
+  bool LoadPLSInfo(CStdString strFileName, const CStdString &content);
 };
 };
